Ungroup in Node Editor Crashes #65612

Closed
opened 2019-06-07 16:55:09 +02:00 by Philip Holzmann · 6 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: blender-2.80.0-git.aa003c73245f-windows64

Short description of error
Ungrouping a node group in the node editor crashes immediately.
Possibly related: #55462

Exact steps for others to reproduce the error
Ungroup.blend
Press Ctrl+Alt+G in the node editor to ungroup.
Immediate crash!

**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: blender-2.80.0-git.aa003c73245f-windows64 **Short description of error** Ungrouping a *node group* in the *node editor* crashes immediately. Possibly related: #55462 **Exact steps for others to reproduce the error** [Ungroup.blend](https://archive.blender.org/developer/F7092113/Ungroup.blend) Press `Ctrl+Alt+G` in the node editor to ungroup. Immediate crash!

Added subscriber: @Foaly

Added subscriber: @Foaly

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2019-06-07 17:06:45 +02:00
Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555b8ccd6f in nodeAddLink (ntree=0x615000075d88, fromnode=0x25e7621be28, fromsock=0x25e7621ca78, tonode=0x615000076008, tosock=0x613000189e08) at //source/blender/blenkernel/intern/node.c:1136
1136      if (fromsock->in_out == SOCK_OUT && tosock->in_out == SOCK_IN) {

Full backtrace: P997

``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555b8ccd6f in nodeAddLink (ntree=0x615000075d88, fromnode=0x25e7621be28, fromsock=0x25e7621ca78, tonode=0x615000076008, tosock=0x613000189e08) at //source/blender/blenkernel/intern/node.c:1136 1136 if (fromsock->in_out == SOCK_OUT && tosock->in_out == SOCK_IN) { ``` Full backtrace: [P997](https://archive.blender.org/developer/P997.txt)

I can reproduce this in an even simpler file, it breaks as long as the output from the node is connect to a node outside.
It is also more convenient because it breaks in an assert:

BLI_assert failed: //source/blender/blenkernel/intern/node.c:1133, nodeAddLink(), at 'fromnode'
Full backtrace same as above.

crash_nodes.blend

I can reproduce this in an even simpler file, it breaks as long as the output from the node is connect to a node outside. It is also more convenient because it breaks in an assert: `BLI_assert failed: //source/blender/blenkernel/intern/node.c:1133, nodeAddLink(), at 'fromnode'` Full backtrace same as above. [crash_nodes.blend](https://archive.blender.org/developer/F7092174/crash_nodes.blend)

This issue was referenced by d05f27c7b9

This issue was referenced by d05f27c7b95371db9e7e4e34a919a3623682a114

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65612
No description provided.