Fix T65612: Ungroup in Node Editor Crashes